# e16-epplets

./: Makefile.am  README.md  autogen.sh  configure.ac  e16-epplets.spec.in
api/: epplet.c
epplets/: E-Cpu.c  E-NetFlame.c  E-Power.c  Makefile.am  cloak.c  esdcloak.c  mbox.c
